Optimized Algorithm Added eXtensive Thread Analysis. Changes to readme.md

--- a/settings.config
+++ b/settings.config
@@ -11,12 +11,15 @@ MAXPROCESSES = 6
 #MODE = SINGLE
 # Use standard single process alphabeta
 MODE = MULTIPROCESS
-# Use multiprocessing when searchrange goes over 30
+# Use multiprocessing when searchrange goes over 25
 MULTIPROCESS_CUTOFF = 25
 # singleprocess to multiprocess transition search range DEPRECATED
 SEARCHRANGE = 1
 # AlphaBeta GetOpenMovesPlus tile search range DEPRECATED
-
+USE_EXTENSIVE_ANALYSIS = 1
+# Use eXtensive Threat Analysis(Analyzes unoccupied positions for further enemy threats) COMPUTATIONAL HEAVY!!
+EA_COEFFICIENT = 2.5
+# XTA amplification coefficient. the bigger, the more defensive it plays.
 
 BOARDSIZE_X = 15
 # Gameboard x dimensions
