--- a/settings.config
+++ b/settings.config
@@ -3,25 +3,32 @@ GRIDSIZE = 50
 # GomokuBoardUI single grid size
 BUFFER = 20
 # GomokuBoardUI Buffer size
+BOARDSIZE_X = 15
+# Gameboard x dimensions
+BOARDSIZE_Y = 15
+# Gameboard y dimensions
 
+AIMODE = ALPHABETA
+# Use Alpha-Beta pruning for move selection
+# MODE = MCTS
+# Use Monte Carlo Tree Search for move selection
 
+#MODE = SINGLE
+# Use standard single process for application
+MODE = MULTIPROCESS
+# Use multiprocess, run calculations on a different process
+
+# -----------------Alpha-Beta Settings-----------
 DIFFICULTY = 3
 # AlphaBeta ply depth
-MAXPROCESSES = 6
-#MODE = SINGLE
-# Use standard single process alphabeta
-MODE = MULTIPROCESS
-# Use multiprocessing when searchrange goes over 25
-MULTIPROCESS_CUTOFF = 25
-# singleprocess to multiprocess transition search range DEPRECATED
 SEARCHRANGE = 1
 # AlphaBeta GetOpenMovesPlus tile search range DEPRECATED
 USE_EXTENSIVE_ANALYSIS = 1
 # Use eXtensive Threat Analysis(Analyzes unoccupied positions for further enemy threats) COMPUTATIONAL HEAVY!!
 EA_COEFFICIENT = 2.5
 # XTA amplification coefficient. the bigger, the more defensive it plays.
+# -------------------MCTS Settings----------
+TIMELIMIT = 15
+# Max time limit for MCTS
 
-BOARDSIZE_X = 15
-# Gameboard x dimensions
-BOARDSIZE_Y = 15
-# Gameboard y dimensions
+
