Cleaned up code. Better refactoring of code and less reusing code. MCTS can now be played with UI.

--- a/settings.config
+++ b/settings.config
@@ -1,23 +1,20 @@
-[GomokuBot]
+[GomokuBoardUI]
 GRIDSIZE = 50
 # GomokuBoardUI single grid size
 BUFFER = 20
 # GomokuBoardUI Buffer size
+[GomokuBoard]
 BOARDSIZE_X = 15
 # Gameboard x dimensions
 BOARDSIZE_Y = 15
 # Gameboard y dimensions
-
+[AI]
 AIMODE = ALPHABETA
 # Use Alpha-Beta pruning for move selection
-# MODE = MCTS
+#AIMODE = MCTS
 # Use Monte Carlo Tree Search for move selection
 
-#MODE = SINGLE
-# Use standard single process for application
-MODE = MULTIPROCESS
-# Use multiprocess, run calculations on a different process
-
+[ALPHABETA]
 # -----------------Alpha-Beta Settings-----------
 DIFFICULTY = 3
 # AlphaBeta ply depth
@@ -27,6 +24,8 @@ USE_EXTENSIVE_ANALYSIS = 1
 # Use eXtensive Threat Analysis(Analyzes unoccupied positions for further enemy threats) COMPUTATIONAL HEAVY!!
 EA_COEFFICIENT = 2.5
 # XTA amplification coefficient. the bigger, the more defensive it plays.
+
+[MCTS]
 # -------------------MCTS Settings----------
 TIMELIMIT = 15
 # Max time limit for MCTS
